--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- GOOGLE FONTS  -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+        <!-- FONT AWESOME -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="CSS/style.css">
         <title>Password super sicura</title>
     </head>
     <body>
 
-        <h1 id="password"></h1>
+        <div class="container">
+
+            <p class="white">Ecco la tua <span class="yellow-sottolineato">password</span> <strong> GALATTICA!!</i></strong></p>
+            <i class="fa-solid fa-earth-americas font-size-100px green"></i>
+            <i class="fa-solid fa-rocket font-size-100px pink "></i>
+            <h1 id="password"></h1>
+
+        </div>
+
 
 
 
